Rewrite the app in HolyC
Not really, this just turns ci on. But hey its a cool name for a commit isn't it?

Signed-off-by: aldairbotherotaku <162842966+aldairbotherotaku@users.noreply.github.com>

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    if: ${{ false }} # at the moment this simply wastes our minutes, we will enable it when we have unit tests etc.
+    if: ${{ true }} # at the moment this simply wastes our minutes, we will enable it when we have unit tests etc.
 
     runs-on: ubuntu-latest
 
